[workspace]
members = [
  "canfund-rs",
  "examples/simple_funding",
  "examples/advanced_funding",
  "tests/integration",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
candid = "0.10"
candid_parser = "0.1.4"
futures = "0.3"
hex = "0.4"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
ic-cdk-timers = "0.11"
ic-ledger-types = "0.14"
itertools = "0.13.0"
lazy_static = "1.5.0"
num-bigint = "0.4"
pocket-ic = "4.0.0"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.12", default-features = false }
tempfile = "3.10"
thiserror = "1.0"
tokio = { version = "1.39" }
toml = "0.8"
uuid = { version = "1.10", features = ["serde", "v4"] }
wat = "1.216.0"
