[workspace]
members = [
  "canfund-rs",
  "examples/simple_funding",
  "examples/advanced_funding",
  "examples/cycles_ledger_funding",
  "tests/integration",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
candid = "0.10"
futures = "0.3"
ic-cdk = "0.19.0"
ic-cdk-macros = "0.19.0"
ic-cdk-timers = "1.0.0"
ic-ledger-types = "0.16.0-beta.1"
pocket-ic = "10.0.0"
icrc-ledger-types = "0.1.8"
lazy_static = "1.5.0"
num-bigint = "0.4"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false }
thiserror = "1.0"
tokio = { version = "1.39" }
toml = "0.8"
wat = "1.216.0"
