[package]
name = 'canfund'
description = 'This Rust library provides a simple interface to monitor and add cycles to canisters on the Internet Computer.'
readme = "../README.md"
homepage = "https://github.com/dfinity/canfund#readme"
repository = "https://github.com/dfinity/canfund"
license = "Apache-2.0"
version = "0.8.4"
include = ['src', 'Cargo.toml']
authors = ["DFINITY Stiftung"]
edition = "2021"
keywords = ["internet-computer", "canbench", "canister", "ic", "cycles"]

[lib]
path = 'src/lib.rs'
bench = false

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
futures = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-ledger-types = { workspace = true }
icrc-ledger-types = { workspace = true }
num-bigint = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ['full'] }
