[package]
name = "simple_funding"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
candid = { workspace = true }
canfund = { path = "../../canfund-rs", version = "0.2.0" }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-ledger-types = { workspace = true }
serde = { workspace = true, features = ['derive'] }
