
[package]
name = 'integration-tests'
version = '0.0.1'
edition = '2021'

[dependencies]
candid = { workspace = true }
candid_parser = { workspace = true }
funding_canister = { path = '../../examples/funding_canister', version = '0.1.0' }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-ledger-types = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
pocket-ic = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ['derive'] }
tempfile = { workspace = true }
tokio.workspace = true
uuid = { workspace = true }
wat = { workspace = true }
