
[package]
name = 'integration-tests'
version = '0.0.1'
edition = '2021'

[dependencies]
candid = { workspace = true }
simple_funding = { path = '../../examples/simple_funding', version = '0.1.0' }
ic-ledger-types = { workspace = true }
lazy_static = { workspace = true }
pocket-ic = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ['derive'] }
serde_json = { workspace = true }
toml = { workspace = true }
wat = { workspace = true }

[build-dependencies]
reqwest = { workspace = true, features = ["blocking", "default-tls"] }
serde = { workspace = true, features = ['derive'] }
serde_json = { workspace = true }
lazy_static = { workspace = true }
toml = { workspace = true }
